Add  for java.io libraries to unblock build
Signed-off-by: Peter Nied <petern@amazon.com>