@@ -218,7 +218,8 @@ testsJar {
 
 test {
     maxParallelForks = 3
-    jvmArgs "-Xmx3072m"
+    jvmArgs += "-Xmx3072m"
+    jvmArgs += "--add-opens=java.base/java.io=ALL-UNNAMED"
     retry {
         failOnPassedAfterRetry = false
         maxFailures = 30
